--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   </head>
   <body>
     <header>
-      <h1>Master Chief</h1>
+      <h1>Halo</h1>
     </header>
     <section>
-      <img src="Halo_Infinite_Keyart_Primary_Horiz_RGB.jpg" alt="haloinfiniteimg">
+      <img src="halo/Halo_Infinite_Keyart_Primary_Horiz_RGB.jpg" alt="haloinfiniteimg">
     <div class="JoinOrFinish">
       <h2>Join The Fight or Finish it</h2>
     </div>
@@ -45,8 +45,8 @@
           untold stories, and become part of the legacy that is Master Chief's relentless struggle against the Covenant.
         </p>
     <ul>
-      <img class="reach" src="GfzwEBy5XYUZnfV5tkZ7dH-1200-80.jpg" alt="reachimg">
-      <img class="halo4" src="Halo_TMCC_Reach_KeyArt_Vert_Final.jpg" alt="halo4img">
+      <img class="reach" src="halo/GfzwEBy5XYUZnfV5tkZ7dH-1200-80.jpg" alt="reachimg">
+      <img class="halo4" src="halo/Halo_TMCC_Reach_KeyArt_Vert_Final.jpg" alt="halo4img">
     </ul>
       </article>
       <article>
